chore: update from template

--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -17,7 +17,7 @@ jobs:
           python-version: "${{ matrix.python_version }}"
       - uses: actions/checkout@v2
       - name: install requirements
-        run: pip install -U --extra-index-url https://pkgs.frkl.io/frkl/dev --extra-index-url https://pkgs.frkl.dev/pypi -e '.[dev_testing,all]'
+        run: pip install -U --extra-index-url https://gitlab.com/api/v4/projects/25344049/packages/pypi/simple '.[dev_testing,all]'
       - name: Test with pytest
         run: make test
 
@@ -34,7 +34,7 @@ jobs:
           python-version: "${{ matrix.python_version }}"
       - uses: actions/checkout@v2
       - name: install requirements
-        run: pip install -U --extra-index-url https://pkgs.frkl.io/frkl/dev --extra-index-url https://pkgs.frkl.dev/pypi -e '.[dev_testing,all]'
+        run: pip install -U --extra-index-url https://gitlab.com/api/v4/projects/25344049/packages/pypi/simple '.[dev_testing,all]'
       - name: Test with mypy
         run: make mypy
 
@@ -48,7 +48,7 @@ jobs:
           python-version: 3.9
       - uses: actions/checkout@v2
       - name: install requirements
-        run: pip install -U --extra-index-url https://pkgs.frkl.io/frkl/dev --extra-index-url https://pkgs.frkl.dev/pypi -e '.[dev_testing,all]'
+        run: pip install -U --extra-index-url https://gitlab.com/api/v4/projects/25344049/packages/pypi/simple '.[dev_testing,all]'
       - name: Test with flake8
         run: make flake
 
