--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,4 +36,4 @@ plugins:
     main_module: "my_project"
 - macros:
    modules:
-     - frkl.project.meta.documentation.mkdocs_macros_frkl
+     - frkl.project.documentation.mkdocs_macros_frkl
