--- a/setup.cfg
+++ b/setup.cfg
@@ -43,16 +43,7 @@ cli =
 dev_build =
     frkl.project[build,all]
 dev_documentation =
-    deepdiff>=5.2.0
-    devtools>=0.6.0
-    frkl.project
-    mkdocs>=1.1.2
-    mkdocs-macros-plugin>=0.5.0
-    mkdocs-material>=6.2.5
-    mkdocs-simple-hooks>=0.1.2
-    mkdocstrings>=0.15.0
-    pip-licenses>=3.3.0
-    pymdown-extensions>=8.1
+    frkl.project[documentation]
 dev_testing =
     flake8>=3.8.4
     mypy>=0.800
